# rapid

./: Cargo.toml  README.md
rapid-parser/: Cargo.toml  LICENSE  README.md  rapid.rs
rapid-parser/data/: LOGGER.mod
rapid-parser/src/: ast.rs  lib.rs  rapid.lalrpop
rapid-vscode/: LICENSE.md  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
rapid-vscode/src/: extension.ts
rapid-vscode/syntaxes/: rapid.tmLanguage.json
rapid-wasm/: Cargo.toml  test.html
rapid-wasm/src/: lib.rs
